# ConvoPeq

./: .clang-format  .clang-tidy  .clangd  .copilotignore  .editorconfig  .gitattributes  .gitignore  .graphifyignore  .markdownlintignore  20  AGENTS.md  AI_Coding_Guidelines.txt  ARCHITECTURE.md  AUDIO_THREAD_LIBM_COMPLIANCE_REPORT.md  AudioEngine.Processing.AudioBlock.cpp  AudioEngine.Processing.BlockDouble.cpp  AudioEngine.Processing.ReleaseResources.cpp  BUILD_GUIDE_WINDOWS.md  CMakeLists.txt  CMakePresets.json  ConvoPeq.code-workspace  ConvoPeq.md  HOW_TO_USE.md  HowtoUse.md  LICENSE.txt  MEMORY_ALLOCATION_AUDIT.md  ProjectMetadata.cmake  README.md  SOUND_PROCESSING.md  build-icx-output.txt  build-release-tmp.bat  build.bat  build_log.txt  build_out.txt  build_result.txt  coding_rule_en.txt  coding_rule_jp.txt  ctest_out.txt  function_AT_Other.md  function_all.md  (+4 more)
.github/: copilot-instructions.md  isr-8_1-close-policy.json  isr-ai-governance-policy.json  isr-authority-growth-allowlist.json  isr-breakglass-overrides.json  isr-clang-tidy-audit-policy.json  isr-clang-tidy-rule-registry.json  isr-cleanup-deferred.json  isr-cleanup-prune-policy.json  isr-contract-registry.json  isr-enforcement-adoption-policy.json  isr-enforcement-source-policy.json  isr-flag-dependency-graph.json  isr-legacy-temporary.json  isr-metric-governance.json  isr-observe-shim-allowlist.json  isr-pr-sla-policy.json  isr-rollback-compatibility-matrix.json  isr-safety-regression-baseline.json  isr-trigger-policy.json  isr-trigger-symbol-allowlist.json  isr-validator-tiering-policy.json  isr-verifier-execution-layers.json  isr-verifier-registry.json  isr-workflow-dispatch-input-policy.json  tmp_test.ps1  workflows-TEST-RESULTS.md
FFTConvolver/: AudioFFT.cpp  AudioFFT.h  FFTConvolver.cpp  FFTConvolver.h  TwoStageFFTConvolver.cpp  TwoStageFFTConvolver.h  Utilities.cpp  Utilities.h
audit/: p12_audit.md  p16_audit.md  p1_defer_commit_paths.md  p1_phase1b_audit.md  p1_runtimepublishworld_construction.md  p2_audit.md  p5_audit.md
config/: authority_inventory.json  pub_boundary_registry.json  publication_manifest.json  runtime_graph_baseline.json
doc/: AirAbsorption_LayerTailContouring_Algorithm_Spec_2026-05-23.md  CMakeLists_元データ_20260602195819.md  IRAdvancedSettings-MIGRATED_元データ_20260602195823.md  IRAdvancedSettings-ORIGIN_元データ_20260602195823.md  ISR Bridge Runtime 改修計画.md  Practical Stable ISR Bridge Runtime.md  ProjectMetadata_元データ_20260602195821.md  Recovery_System_Plan.md  Thread_configuration_diagram_en.md  Thread_configuration_diagram_jp.md  a6_a12_preflight_jp.md  audioengine_lint_candidates.md  basic_rule.md  bug.md  bug2.md  bug3.md  build_元データ_20260602195819.md  class_definition_en.md  class_definition_jp.md  codeql_critical_high_immediate_action_20260524.md  codeql_standard_db_workflow_jp.md  coding_rule_en_元データ_20260602195823.md  data_flow_en.md  data_flow_jp.md  delayed_callback_safety_checklist_2026-05-24.md  design_immutable_runtime_graph.md  detailed_design_plan4_rule4_jp.md  detailed_design_plan_rule_jp.md  directory_map_en.md  directory_map_jp.md  document_lists.txt  document_lists_元データ_20260602195823.md  error_元データ_20260602195823.md  gain_staging_analysis_2026-06-21.md  github_pr_templates_pr1_pr4.md  immediate_implementation_tasklist_dependency_order_jp.md  immutable_snapshot_runtime_detailed_plan_2026-05-17.md  implementation_preflight_checklist.md  index.html  index_jp.html  (+30 more)
document/: input_bitdepth_transform.txt
evidence/: atomic_dotcall_scan.json  breakglass_overrides_report.json  c1_c15_minimal_report.json  close_policy_8_1_report.json  close_policy_8_1_workflow_input_coherence_report.json  close_policy_8_1_workflow_input_contract_report.json  closure_graph.json  epoch_reclaim_audit.json  evidence_manifest.json  governance_consistency_report.json  governance_registries_report.json  hb_graph_trace.json  hb_violation_report.json  isr_v73_retire_pressure_report.json  mutation_fault_trace.json  ownership_closure_check.json  payload_tier_report.json  phase4_generation_drift_report.json  recovery_trace.json  retire_escalation_safety_report.json  retire_latency_report.json  retire_timeline.json  retire_trace_shutdown_last.json  runtime_budget_report.json  runtime_coordinator_state_machine_report.json  runtime_semantic_schema_v16_report.json  runtime_snapshot.json  shadow_compare_cadence.json  shutdown_trace.json  verifier_execution_layers_report.json  verifier_manifest_hash.txt  workflow_dispatch_input_policy_report.json  world_lifecycle_audit.json
manual/: ADAPTIVE_NOISE_SHAPER_LEARNING_WINDOW_EN.md  ADAPTIVE_NOISE_SHAPER_LEARNING_WINDOW_JP.md  AUDIO_SETTINGS_WINDOW_EN.md  AUDIO_SETTINGS_WINDOW_JP.md  IR_ADVANCED_WINDOW_EN.md  IR_ADVANCED_WINDOW_JP.md  MAIN_WINDOW_EN.md  MAIN_WINDOW_JP.md
r8brain-free-src/: example.cpp
sample_setting/: HIFIMAN HE400se (stealth magnet) ParametricEq.txt  README.txt
sampledata/: HIFIMAN HE400se (stealth magnet) ParametricEq.txt  README.txt  test_music_readme.txt
src/: AlignedAllocation.h  AllpassDesigner.cpp  AllpassDesigner.h  App.tsx  AsioBlacklist.h  AudioEngine.Commit.cpp  AudioEngine.Learning.cpp  AudioEngine.Processing.cpp  AudioEngine.RebuildDispatch.cpp  AudioEngine.StateIO.cpp  AudioEngine.Threading.cpp  AudioEngine.cpp  AudioEngine.h  AudioEngineProcessor.cpp  AudioEngineProcessor.h  AudioSegmentBuffer.h  CacheManager.cpp  CacheManager.h  CmaEsOptimizer.h  CmaEsOptimizerDynamic.cpp  CmaEsOptimizerDynamic.h  ConvolverControlPanel.cpp  ConvolverControlPanel.h  ConvolverProcessor.cpp  ConvolverProcessor.h  ConvolverRuntime.h  ConvolverRuntimeCompatAliases.h  ConvolverSettingsComponent.cpp  ConvolverSettingsComponent.h  ConvolverState.cpp  ConvolverState.h  CpuFeatureCheck.cpp  CpuFeatureCheck.h  CustomInputOversampler.cpp  CustomInputOversampler.h  DeferredDeletionQueue.h  DeferredFreeThread.h  DeviceSettings.cpp  DeviceSettings.h  DftiHandle.h  (+58 more)
tests/: test_group_delay.cpp
tools/: AutoGainBenchmark.cpp  _audit_tanh_verify.py  analyze_dump.py  authority_duplication_verifier.py  authority_inventory_verifier.py  benchmark_irs.py  (+59 more)
(+1466 files in other folders)
